# GottaCatchEmAll

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile  mainpage.md
include/ExampleDir/: Cerealizer.h  Example.h  NetworkServices.h  TcpListener.h
src/ExampleDir/: Cerealizer.cpp  Example.cpp  NetworkServices.cpp  TcpListener.cpp
tests/ExampleDir/: Example.test.cpp
